# human-format-rs

./: .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml  changelog.md  index.md  sonar-project.properties
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: rust-beta.yml  rust.yml
examples/: test.md
src/: lib.rs
tests/: demo.rs  formatting.rs  parsing.rs
