[package]
name = "human_format"
version = "1.0.2"
authors = ["Bob Chatman <bob.chatman@gmail.com>"]
license = "MIT"
description = "Rust Port of human-format from node, formatting numbers for us, while the machines are still at bay."
homepage = "https://github.com/BobGneu/human-format-rs"
repository = "https://github.com/BobGneu/human-format-rs"
documentation = "https://docs.rs/human_format"
readme = "README.md"
license-file = "LICENSE"
keywords = ["numbers", "formatting", "byte", "distance", "bytes", "file", "filesize", "human", "humanized", "pretty", "readable", "si", "size", "unit", "magnitude"]
categories = ["value-formatting", "no-std"]

[lib]
name = "human_format"
path = "src/lib.rs"

[badges]
travis-ci = { repository = "BobGneu/human-format-rs" }
appveyor =  { repository = "BobGneu/human-format-rs" }
maintenace = { status = "actively-developed" }

[dev-dependencies]
galvanic-test = "0.1.3"