[package]
name = "human_format"
version = "1.0.3"
authors = ["Bob Chatman <bob.chatman@gmail.com>"]
license = "MIT"
description = "Rust Port of human-format from node, formatting numbers for us, while the machines are still at bay."
homepage = "https://github.com/BobGneu/human-format-rs"
repository = "https://github.com/BobGneu/human-format-rs"
documentation = "https://docs.rs/human_format"
readme = "README.md"
keywords = ["numbers", "formatting", "filesize", "human", "magnitude"]
categories = ["value-formatting", "no-std"]

[lib]
name = "human_format"
path = "src/lib.rs"

[badges]
maintenance = { status = "passively-maintained" }

[dev-dependencies]
galvanic-test = "0.1.3"